--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -51,4 +51,7 @@ jobs:
         uses: actions/setup-python@v3
 
       - name: Run Unit Tests
-        run: pytest -rf tests/*
+        run: |
+          pip install -r requirements.txt
+          pip install pytest
+          pytest -rf tests/*
