--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -1,10 +1,10 @@
-name: formatting_checks
+name: ci_cd_checks
 
 on:
   pull_request:
-    branches: ["master", "dev"]
+    branches: "*"
   push:
-    branches: ["master", "dev"]
+    branches: "*"
 
 jobs:
   check_linting_and_formatting: 
@@ -30,15 +30,13 @@ jobs:
     - name: Installs
       if: steps.changed-python-files.outputs.any_changed == 'true'
       run: |
-        python -m pip install black flake8 isort
+        python -m pip install ruff
 
-    - name: Run Python formatting and linting
+    - name: Ruff
       if: steps.changed-python-files.outputs.any_changed == 'true'
       run: |
-        flake8 ${{ steps.changed-python-files.outputs.all_changed_files }} --extend-ignore=E203,W503 --max-line-length=120
-        black --check ${{ steps.changed-python-files.outputs.all_changed_files }}
-        isort --profile black ${{ steps.changed-python-files.outputs.all_changed_files }}
-  
+        ruff check --output-format=github .
+
   run_unit_tests:
     runs-on: macos-latest
     steps:
