--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,33 @@
+[build-system]
+requires = ["poetry>=1.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+name = "klondike"
+version = "0.2.3"
+description = "Klondike is a suite of database connectors, powered by Polars"
+authors = ["Ian Ferguson <IANFERGUSONRVA@gmail.com>"]
+license = "MIT"
+
+repository = "https://github.com/IanRFerguson/klondike"
+keywords = ["polars", "bigquery", "snowflake", "redshift"]
+readme = "./README.md"
+
+[tool.poetry.dependencies]
+python = "^3.8"
+google-cloud-bigquery = "3.19.0"
+snowflake-connector-python = "3.10.1"
+polars = "0.20.16"
+pyarrow = "15.0.2"
+
+[tool.poetry.dev-dependencies]
+ruff = "0.9.1"
+pytest = "8.3.3"
+
 [tool.ruff]
 target-version = "py310"
 line-length = 120
-# isort = { profile = "black", line_length = 120 }
 
 [tool.ruff.lint]
-select = [
-    "E",
-    "F", 
-    "I"
-] 
+select = ["E", "F", "I"]
 fixable = ["ALL"]
