call pytest directly

--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -64,4 +64,4 @@ jobs:
           poetry install --no-root
 
       - name: Run Unit Tests
-        run: pytest -rf tests/*
+        run: python -m pytest -rf tests/*
