--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "klondike"
-version = "0.3.3"
+version = "0.3.0"
 authors = [{ "name" = "Ian Richard Ferguson", "email" = "IAN@ianferguson.dev" }]
 description = "Klondike is a suite of database connectors, powered by Polars"
 requires-python = "~=3.12.0"
@@ -16,10 +16,11 @@ keywords = [
 ]
 readme = "./README.md"
 dependencies = [
-    "google-cloud-bigquery",
-    "snowflake-connector-python",
-    "polars",
-    "pyarrow",
+    "google-cloud-bigquery==3.40.0",
+    "google-cloud-storage==3.9.0",
+    "snowflake-connector-python==4.2.0",
+    "polars==1.38.1",
+    "pyarrow==23.0.0",
 ]
 
 [build-system]
