fix pytests + add color logs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "snowflake-connector-python==4.2.0",
     "polars==1.38.1",
     "pyarrow==23.0.0",
+    "colorlogger>=1.0",
 ]
 
 [build-system]
