--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,34 +3,24 @@ name: Publish to PyPI
 on:
   push:
     branches:
-      - main  # This triggers when a PR is merged into main
+      - main
 
 jobs:
   build-n-publish:
     name: Build and publish Klondike to PyPI
     runs-on: ubuntu-latest
-    environment:
-      url: https://pypi.org/p/klondike
     permissions:
-      id-token: write  # MANDATORY for Trusted Publishers
-      contents: read   # Required to check out the code
+      id-token: write
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
       
       - name: Set up uv
-        uses: astral-sh/setup-uv@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Install build dependencies
-        run: uv run python -m pip install build
+        uses: astral-sh/setup-uv@v5       # Updated to v5
 
       - name: Build distributions
-        run: uv run python -m build
+        run: uv build                     # Simplified: uv handles building natively
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
